<resources>
    <string name="app_name">FitMe</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="title_activity_content" translatable="false">ContentActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="title_activity_profile" translatable="false">ProfileActivity</string>

    <string name="title_activity_meals" translatable="false">MealsActivity</string>
    <string name="title_activity_meal_details" translatable="false">MealDetailsActivity</string>
    <string name="title_activity_workouts" translatable="false">WorkoutsActivity</string>
    <string name="title_activity_workout_details" translatable="false">workoutDetailsActivity</string>
    <string name="appName" translatable="false">FitMe</string>
    <string name="notAMember">Not a member yet ? Register Here</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="my_meals">My Meals</string>
    <string name="my_workouts">My Workouts</string>
    <string name="about">About</string>
    <string name="displayname">DisplayName:</string>
    <string name="since_its_your_first_time_lets_set_up_your_profile">Since its your first time lets set up your profile.</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="sets">Sets:</string>
    <string name="reps">Reps:</string>
    <string name="weight_cm">Weight(kg):</string>
    <string name="addmeal">Add Meal</string>
    <string name="sethour">Set Hour</string>
    <string name="hourrequired">Hour required</string>
    <string name="contentrequired">Content required</string>
    <string name="namerequired">Name required</string>
    <string name="addexc">Add Excercise</string>
    <string name="age">Age :</string>
    <string name="height_cm">Height(cm) :</string>
    <string name="set">Set</string>
    <string name="welcome">Welcome</string>
    <string name="age_clear">Age</string>
    <string name="youdonthavemeals">You don׳t have any Meals, click here to add.</string>
    <string name="see_all">See all</string>
    <string name="workout_name">Workout Name:</string>
    <string name="description">Description:</string>
    <string name="add_excercise">Add Excercise</string>
    <string name="done">Done</string>
    <string name="here_you_can_change_your_profile">Here you can change your profile.</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="workouts">Workouts</string>
    <string name="news">News</string>
    <string name="meals">Meals</string>
    <string name="hi">Hi,</string>
    <string name="exercise_name">Exercise Name:</string>
    <string name="add">Add</string>
    <string name="last_weight">Last Weight:</string>
    <string name="bmr_desc">Basal Metabolic Rate (BMR) is the rate of energy expenditure per unit time by endothermic animals at rest.</string>
    <string name="rmr_desc">Rested Metabolic Rate (RMR) is the rate of energy expenditure per unit time at full reset. </string>
    <string name="bmi_desc">Body mass index, or BMI, is a measure of body size. It combines a person\'s weight with their height. The results of a BMI measurement can give an idea about whether a person has the correct weight for their height.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="set_exc">Set Excercise</string>
    <string name="your_bmi">"Your BMI is "</string>
    <string name="your_bmr">"Your BMR is "</string>
    <string name="your_rmr">"Your RMR is "</string>
    <string name="rate_us">Rate us</string>
    <string name="share">Share</string>
    <string name="youdonthavework">You don׳t have any workouts, click here to add.</string>
    <string name="invite_ur">Invite your Friends.</string>
    <string name="title_activity_goals" translatable="false">GoalsActivity</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="goals">Goals</string>
    <string name="add_goal">Add Goal</string>
    <string name="goal_add_successfully">Goal Added Succesfully</string>
    <string name="title">Title:</string>
    <string name="send">Send</string>
    <string name="change_profile">Change Profile</string>
    <string name="set_hour">Set Hour</string>
    <string name="meal_content">Meal Content:</string>
    <string name="meal_name">Meal Name:</string>
    <string name="you_dont_goals">You don׳t have any goals, click here to add.</string>
    <string name="add_workout">Add Workout</string>
    <string name="profile_success">Profile successfully changed</string>
    <string name="login_sc">Login Succesfull</string>
</resources>
