<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_meals"
            android:icon="@drawable/ic_meals"
            android:title="@string/my_meals" />
        <item
            android:id="@+id/nav_workouts"
            android:icon="@drawable/ic_workouts"
            android:title="@string/my_workouts" />
        <item
            android:title="@string/goals"
            android:icon="@drawable/goals"
            android:id="@+id/nav_goals"
            />

    </group>


    <item android:title="           -------------------------------------------------">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"/>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_menu_rate"
                android:title="@string/rate_us"/>
        </menu>
    </item>

</menu>
